# DataClean-and-Chunk

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
dags/: pipeline_dag.py
scripts/: batch-process.sh  composer-requirements.txt  deploy-function.sh  process-doc.sh  setup-cloudsql.sh  setup-composer.sh  setup-docai.sh  setup-output-bucket.sh  start-cloudsql-proxy.sh
src/pipeline/: __init__.py  chunker.py  cleaner.py  config.py  embedder.py  event_handler.py  extractor.py  metadata.py  runner.py  vector_store.py
tests/: conftest.py  test_chunker.py  test_cleaner.py  test_config.py  test_embedder.py  test_event_handler.py  test_metadata.py  test_runner.py  test_vector_store.py
