[project]
name = "data-clean-and-chunk"
version = "0.1.0"
description = "Serverless pipeline that extracts, cleans, chunks, and metadata-tags corporate documents for AI ingestion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "functions-framework>=3.10.2",
    "google-cloud-documentai>=3.15.0",
    "google-cloud-pubsub>=2.39.0",
    "google-cloud-storage>=3.13.0",
    "langchain>=1.3.14",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
pipeline = "main:main"
